Fix portfolio sim causing overflow and horizontal scroll

--- a/portfolio-app/src/index.css
+++ b/portfolio-app/src/index.css
@@ -46,6 +46,8 @@ html {
   font-family: 'Poppins Light';
   font-size: 1rem;
   color: black;
+  /*max-width: 100%;*/
+  overflow-x: hidden;
 }
 
 body {
